--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,12 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
+    "json5": "^2.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2",
     "sharp": "^0.33.0",
     "socket.io": "^4.7.4",
     "zod": "^3.25.76"
