--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
-    "build": "cd client && npm run build",
+    "build": "npm install --prefix client && npm run build --prefix client",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install",
-    "start": "cd server && npm start"
+    "start": "node server/index.js",
+    "render-build": "npm install --prefix server && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [
     "design",
