--- a/server/.env.example
+++ b/server/.env.example
@@ -14,8 +14,8 @@ GEMINI_API_KEY=your-gemini-api-key-here
 GEMINI_MODEL=gemini-2.0-flash-exp
 GEMINI_FALLBACK_MODEL=gemini-1.5-flash
 
-# CORS Configuration - Your Render frontend URL (update after deployment)
-CORS_ORIGIN=https://your-app-name.onrender.com
+# CORS Configuration - Frontend URL (update after deployment)
+CORS_ORIGIN=https://designmate-ai.vercel.app
 
 # Rate Limiting Configuration
 RATE_LIMIT_WINDOW_MS=900000
